--- a/src/components/mainSliders/bestsellers/BestSellers.module.scss
+++ b/src/components/mainSliders/bestsellers/BestSellers.module.scss
@@ -1,4 +1,5 @@
 .bestsellers {
-    background: url("../../../assets/mainSlidersBack.png") center/cover no-repeat;
-    position: relative;
+  background: url("../../../assets/mainSlidersBack.png") center/cover no-repeat;
+  position: relative;
+  overflow: hidden;
 }
