--- a/src/components/mainSliders/newItems/NewItems.module.scss
+++ b/src/components/mainSliders/newItems/NewItems.module.scss
@@ -1,3 +1,4 @@
 .new {
   position: relative;
+  overflow: hidden;
 }
