--- a/src/components/mainSliders/sales/Sales.module.scss
+++ b/src/components/mainSliders/sales/Sales.module.scss
@@ -1,4 +1,5 @@
 .sales {
   background: url("../../../assets/mainSlidersBack.png") center/cover no-repeat;
   position: relative;
+  overflow: hidden;
 }
