--- a/src/components/mainSliders/weRecommend/WeRecommend.module.scss
+++ b/src/components/mainSliders/weRecommend/WeRecommend.module.scss
@@ -1,3 +1,4 @@
 .recommendations {
-    position: relative;
+  position: relative;
+  overflow: hidden;
 }
