--- a/src/components/ourGeography/OurGeography.module.scss
+++ b/src/components/ourGeography/OurGeography.module.scss
@@ -31,9 +31,15 @@
 
   &__content {
     min-width: 365px;
+    max-width: 365px;
+
+    @media (max-width: 1100px) {
+      max-width: 607px;
+    }
 
     @media (max-width: 460px) {
       min-width: 100%;
+      max-width: 100%;
     }
 
     h2 {
@@ -70,13 +76,9 @@
   }
 
   &__img {
-    width: 72%;
     object-fit: contain;
     object-position: center center;
-
-    @media (max-width: 1100px) {
-      width: 100%;
-    }
+    width: 100%;
 
     @media (max-width: 600px) {
       object-fit: cover;
